# MedTech

./: .env.example  .gitignore  .vercelignore  AGENTS.md  AI_HANDOFF.md  CLAUDE.md  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  proxy.ts  vitest.config.ts
messages/: en.json  (+2 more)
rag_service/: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
rag_service/api/: index.py
rag_service/app/: __init__.py
rag_service/app/api/: __init__.py  server.py
rag_service/app/rag/: __init__.py  assistant.py  index.py  ingest.py  llm.py  loader.py  schemas.py  text.py
rag_service/app/web/: app.js  index.html  styles.css
rag_service/askhat_rag/: __init__.py  config.py  data_loader.py  generator.py  indexer.py  postprocessor.py  query_analyzer.py  retriever.py  server.py
rag_service/askhat_rag/static/: index.html
rag_service/codex_medical_platform_handoff/: AGENTS.md  CODEX_START_PROMPT.md  README_HANDOFF.md
rag_service/codex_medical_platform_handoff/docs/: DATASET_GUIDE.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  PROJECT_SPEC.md
rag_service/data/corpus/: README.md
rag_service/scripts/: askhat_build_dense.py  askhat_build_index.py  audit_golden.py  evaluate_golden.py  evaluate_retrieval.py  extract_nrchd_structured.py  generate_clinical_protocols.py  merge_protocol_corpus.py  run_askhat_rag.sh
rag_service/tests/: __init__.py  test_askhat_grounding.py  test_rag.py
rag_service/tools/: download_kz_protocols.mjs  download_nrchd_protocols.mjs
(+202 files in other folders)
