[project]
name = "ai-clinical-platform-kz"
version = "0.1.0"
description = "Protocol-grounded medical RAG assistant MVP for Kazakhstan clinical protocols."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "faiss-cpu>=1.9",
    "httpx>=0.27.0",
    "numpy>=2.0",
    "openai>=1.60",
    "pydantic>=2.8.0",
    "pymystem3>=0.2",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.3.0",
    "rank-bm25>=0.2",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
local-embeddings = [
    "sentence-transformers>=3.3,<4",
    "transformers>=4.41,<5",
]
doc-extraction = [
    "docling>=2.44",
    "pdfplumber>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
